Add atime, mtime, acounter fields to Word class, change the database table scheme

--- a/readme.adoc
+++ b/readme.adoc
@@ -251,7 +251,7 @@ Word *-- SenseEntry : sensenEntrylist
 MITDict o-- Word
 DefaultLocalDict o-- Word
 Database -- App
-App -- LocalDict
+App -- Dict
 CollinsOnlineDict <-- Request
 Request <-- Extractor
 Extractor <-- Word
