--- a/readme.adoc
+++ b/readme.adoc
@@ -62,6 +62,8 @@ abstract class Dict {
      + void setDescription(String description)
      + void setType(DictType type)
 
+     + {static} String preProcessWordSpell(String wordSpell)
+
     {abstract} Word queryWord(String wordSpell);
 }
 
